<resources>
    <string name="app_name">Guess the Number</string>
    <!-- START -->
    <string name="btn_play">Play</string>
    <string name="btn_tutorial">Tutorial</string>
    <string name="btn_exit">Exit</string>

    <!-- TUTORIAL -->
    <string name="tutorial_title">Guess the Number Tutorial</string>
    <string name="tutorial_pagraph">This is a number guessing game, in which a random number between 0 and 100 is generated. As a participant, you will be given 5 chances to correctly identify this number. Throughout the game, you will receive hints that will help you get closer to the target number, indicating whether the number you have guessed is greater or less than the randomly generated number. Your ability to interpret these clues and adjust your guesses will be key to your success in this challenge. Good luck!</string>

    <!-- GAMEPLAY -->
    <string name="game_title">GUESS THE NUMBER</string>
    <string name="game_action">Im thinking of a number between 0 and 100. Can you guess what it is?</string>
    <string name="lifes_text">Remaining lives: </string>
    <string name="number_placeholder">Enter number</string>
    <string name="btn_guess">Guess!</string>
    <string name="higher_number">Think of a number that is HIGHER. Try again!</string>
    <string name="lower_number">Think of a number that is LOWER. Try again!</string>
    <string name="correct_number">Youve guessed the number! CONGRATULATIONS!</string>

    <!-- GAME RESULT -->
    <string name="subtitle_result">The result was: </string>
    <string name="player_lose">YOU LOSE!</string>
    <string name="player_wins">YOU WIN!</string>
    <string name="play_again_text">Do you want to play again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
