<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_marginBottom="100dp"
    android:padding="36dp">

    <TextView
        android:id="@+id/playerStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_lose"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_result"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/ResultGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="10dp"
        android:textSize="40dp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_again_text"
        android:layout_marginTop="40dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnRestartGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:background="@color/green"
            android:textColor="@color/dark_blue"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btnQuitGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:textColor="@color/dark_blue"
            android:text="@string/no"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</LinearLayout>
