<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        app:srcCompat="@drawable/logotipo_adivina_el_numero_esp" />
    <Button
        android:id="@+id/btnJugar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/btn_play"
        android:textColor="@color/dark_blue" />

    <Button
        android:id="@+id/btnTutorial"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/green"
        android:text="@string/btn_tutorial"
        android:textColor="@color/dark_blue" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/green"
        android:text="@string/btn_exit"
        android:textColor="@color/dark_blue" />



</LinearLayout>
