<?xml version="1.0" encoding="utf-8"?>
<!-- fragment_tutorial.xml -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título del tutorial -->
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_title"
        android:textSize="26sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <!-- Párrafo explicativo -->
    <TextView
        android:id="@+id/textExplanation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/tutorial_pagraph"
        android:textSize="18sp"
        android:lineSpacingMultiplier="1.2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"/>

    <!-- Botón para cerrar el fragmento -->
    <Button
        android:id="@+id/btnCloseTutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/green"
        android:textColor="@color/dark_blue"
        android:layout_marginBottom="70dp"
        android:drawableLeft="@drawable/baseline_arrow_back_ios_new_24"
        android:text="@string/btn_exit" />

</LinearLayout>
