<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:textColor="@color/green"
        android:textStyle="bold"
        android:text="@string/game_title"
        android:textSize="30sp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="353dp"
        android:layout_height="94dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="@string/game_action"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginTop="100dp"
        android:text="@string/lifes_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TriesPlayer"
        android:layout_width="29dp"
        android:layout_height="51dp"
        android:layout_marginStart="344dp"
        android:layout_marginTop="92dp"
        android:gravity="end"
        android:text="5"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultPlayer"
        android:layout_width="277dp"
        android:layout_height="37dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="240dp"
        android:gravity="center"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editId"
        android:layout_width="348dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="276dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/number_placeholder"
        android:inputType="numberDecimal"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="376dp"
        android:text="@string/btn_guess"
        android:textColor="@color/dark_blue"
        android:background="@color/green"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="664dp"
        android:text="@string/btn_exit"
        android:drawableLeft="@drawable/baseline_arrow_back_ios_new_24"
        android:textColor="@color/dark_blue"
        android:background="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
